Evaluation updates and comments from AK

--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -1375,8 +1375,8 @@ CPALockator выдает предупрждение для этого указа
 \textbf{Коммит:} 8a2629a
 
 Коммит исправлет высокоуровневое состояние гонки.
-При установлении нового соединения функция \textit{isert_connect_request} создавала структуру данных, соответствующую новому соединению, инициализировала ее, потом под мьютексом добавляла в разделяемый список и в конце будила спящий поток \textit{isert_accept_np}, который начинал работать с новым соединением.
-Однако, в случае нескольких созданных запросов после создания одного соединения проснутся сразу несколько потоков \textit{isert_accept_np}.
+При установлении нового соединения функция \textit{isert\_connect\_request} создавала структуру данных, соответствующую новому соединению, инициализировала ее, потом под мьютексом добавляла в разделяемый список и в конце будила спящий поток \textit{isert\_accept\_np}, который начинал работать с новым соединением.
+Однако, в случае нескольких созданных запросов после создания одного соединения проснутся сразу несколько потоков \textit{isert\_accept\_np}.
 Каждый из них проверит список соединений под блокировками, что означает, что только один из них получит соединение, а остальные снова отправяться ждать. 
 После пяти итераций эти потоки начнут завершаться с ошибкой, что приведет к потерям запросов.
 
