--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -2605,7 +2605,7 @@ $E^T_V = 2^{X \to \mathcal{Z}} \cup G$.
 \section{Метод поиска состояния гонки}
 \label{sect_race_theory}
 
-Метод поиска состояния гонки заключается в построении множества достижимых абстрактных переходов с помощью алгоритма CPA~\ref{cpa_algorithm_ps}, а затем в поиске пары абстрактных переходов, начальные состояния которых являются совместными, а сами переходы производят доступ к разделяемой области памяти, при этом хотя бы один из доступов является записью.
+Метод поиска состояния гонки заключается в построении множества достижимых абстрактных переходов с помощью алгоритма CPA~\ref{cpata_algorithm_ps}, а затем в поиске пары абстрактных переходов, начальные состояния которых являются совместными, а сами переходы производят доступ к разделяемой области памяти, при этом хотя бы один из доступов является записью.
 
 Построение множества достижимых состояний производится с помощью комбинации описаных ранее CPA.
 Возможны различные конфигурации, в зависимости от поставленной задачи, например, такая: анализ точек программы $\mathcal{L}$, анализ потоков $\mathbb{T}$, анализ примитивов синхронизации $\mathbb{S}$ и анализ предикатов $\mathbb{P}$. Все эти анализы объединяются с помощью композитного анализа $\mathbb{C}$. Кроме различного множества используемых CPA возможно более точная настройка каждого CPA в отдельности, например, изменением варианта оператора $merge$.
@@ -2657,7 +2657,7 @@ t_n
 \right), \\
 \end{align*}
 
-По требованию~\ref{cpa_transfer_inner_eq} переход $e_0$ должен быть применим ($apply$) ко всем переходам $\tilde{e}_i$, а значит и к $\tilde{e}_0$.
+По требованию~\ref{cpa_transfer_inner_req} переход $e_0$ должен быть применим ($apply$) ко всем переходам $\tilde{e}_i$, а значит и к $\tilde{e}_0$.
 Таким образом, получаем, что переходы $e_0$ и $\tilde{e}_0$ должны быть совместны.
 При этом требования на абстракные операции $q_1, q_2$ должны быть теми же, что и в определении состояния гонки~\ref{raceDef}: доступ к одной области памяти, и хотя бы одна операция записи.
 Итак, можно сформулировать определение состояния гонки на абстрактных состояниях.
