--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,37 +1,40 @@
 
 {\actuality} Информационные технологии являются важной составляющей инфраструктуры современного общества.
 Они позволяют автоматизировать различные процессы жизнедеятельности человека и обеспечить возможность коммуникации.
-В настоящее время невозможно представить себе высокотехнологичное производство или сервис услуг, которые бы обходились без использования информационных технологий.
-Более того, сейчас активно развиваются технологии, которые позволяют автоматизировать бытовые потребности человека.
+%В настоящее время невозможно представить себе высокотехнологичное производство или сервис услуг, которые бы обходились без использования информационных технологий.
+%Более того, сейчас активно развиваются технологии, которые позволяют автоматизировать бытовые потребности человека.
 %К таким технологиям относится «интернет вещей» (англ. Internet of Things, IoT).
-Это означает, что жизнь человека становится все более и более зависимой от программных систем.
+%Это означает, что жизнь человека становится все более и более зависимой от программных систем.
+Для эффективного использования многоядерных систем широко используется многопоточное программное обеспечение, в том числе и системное программное обеспечение.
+Например, в ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных активностей: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
+%
 
-Информационные системы непрерывно развиваются и усложняются. 
-С ростом сложности программных продуктов росло и количество ошибок в них.
-Повышение роли программного обеспечения в жизнедеятельности человека приводит к увеличению величины последствий от отказа или некорректного поведения.
-Некоторые ошибки способны сильно исказить правильное выполнение программы и привести к серьезным последствиям.
-В 2017 году компания Coverity опубликовала очередной отчет, в котором были приведены результаты исследования изучения 760 млн строк кода.
-В среднем, в программном продукте содержится около 1.4 ошибок на 1000 строк кода.
-Это число ошибок значительно вырасло по сравнению с отчетами предыдущих лет.
-Таким образом, число проблем в проекте размером миллион строк кода исчисляется тысячами.
-Степень критичности ошибки также зависит и от той области, в которой применяется программное обеспечение.
-Ошибки в программных системах, используемых в авиации или на атомных электростанциях, могут привести к значительным человеческим жертвам или колоссальным финансовым затратам.
-Известно множество случаев, в которых ошибки в программном обеспечении приводили к серьезным последствиям, например, случаи с аппаратом лучевой терапии Therac-25 и с космическим аппаратом 
-Phobos\citeinsynopsis{Leveson:1995}.
-Таким образом, с момента возникновения первых вычислительных систем перед людьми всегда стояла задача проверки правильности программы. 
+%Информационные системы непрерывно развиваются и усложняются. 
+%С ростом сложности программных продуктов росло и количество ошибок в них.
+%Повышение роли программного обеспечения в жизнедеятельности человека приводит к увеличению величины последствий от отказа или некорректного поведения.
+%Некоторые ошибки способны сильно исказить правильное выполнение программы и привести к серьезным последствиям.
+%В 2017 году компания Coverity опубликовала очередной отчет, в котором были приведены результаты исследования изучения 760 млн строк кода.
+%В среднем, в программном продукте содержится около 1.4 ошибок на 1000 строк кода.
+%Это число ошибок значительно вырасло по сравнению с отчетами предыдущих лет.
+%Таким образом, число проблем в проекте размером миллион строк кода исчисляется тысячами.
+%Степень критичности ошибки также зависит и от той области, в которой применяется программное обеспечение.
+%Ошибки в программных системах, используемых в авиации или на атомных электростанциях, могут привести к значительным человеческим жертвам или колоссальным финансовым затратам.
+%Известно множество случаев, в которых ошибки в программном обеспечении приводили к серьезным последствиям, например, случаи с аппаратом лучевой терапии Therac-25 и с космическим аппаратом 
+%Phobos\citeinsynopsis{Leveson:1995}.
+%Таким образом, с момента возникновения первых вычислительных систем перед людьми всегда стояла задача проверки правильности программы. 
 
 %Под верификацией будем понимать проверку соответствия одних создаваемых в ходе разработки и сопровождения программного обеспечения сущностей другим, ранее созданным или используемым в качестве исходных данных, а также соответствие этих сущностей и процессов их разработки правилам и стандартам [4]. В качестве сущностей могут выступать непосредственно программы, модели, документы и др.
 %Существует несколько методов верификации: экспертиза, статический анализ, формальные методы, динамические методы, синтетические методы. 
 
 %Поэтому с самого начала развития информатики развиваются и совершенствуются методы проверки программ и доказательства их корректности. Их уже достаточно много: от ручных математических доказательств, до динамического тестирования. Они прошли долгий путь от формальных математических доказательств, которые были доступны только специалистам, обладающим хорошим математическим образованием, до прикладных инструментов, понятных даже инженерам и разработчикам прикладного программного обеспечения.
 
-Развитие параллельных вычислений привело к быстрому разрастанию кода, который предполагает параллельное исполнение.
-%Цифры? 
-Параллельные алгоритмы позволяют более эффективно использовать доступные вычислительные ресурсы.
-Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
-В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
+%Развитие параллельных вычислений привело к быстрому разрастанию кода, который предполагает параллельное исполнение.
+%%Цифры? 
+%Параллельные алгоритмы позволяют более эффективно использовать доступные вычислительные ресурсы.
+%Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
+%В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
 
-Основными классами ошибок в параллельных программах являются состояния гонки и состояния взаимных блокировок.
+В дополнении к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: состояния взаимной блокировки и состояния гонки.
 В общем случае состоянием гонки называют ситуацию, при которой поведение программы зависит от порядка или времени выполнения некоторых неконтролируемых событий.
 Важное уточнение заключается в том, что такое выполнение не всегда является ошибкой.
 Проблемы возникают тогда, когда разработчик не предусматривает некоторое из возможных поведений программы.
@@ -50,30 +53,44 @@ Phobos\citeinsynopsis{Leveson:1995}.
 Они возникают при некорректном использовании блокирующих механизмов синхронизации.
 В этом случае все потоки системы находятся в ожидании некоторого разблокирующего действия от других потоков и не могут продолжить свое выполнение. 
 
-Ошибки, связанные с параллельным исполнением кода искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо представлять все возможные сценарии взаимодействия потоков.
-Поиск и исправление таких ошибок осложняется случайным характером их проявлений -- ошибка может проявляться очень редко.
+Оба класса ошибок так или иначе связаны с некорректной синхронизацией параллельно выполняющихся потоков.
+Такие ошибки, связанные с параллельным исполнением кода, искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо представлять все возможные сценарии взаимодействия потоков.
+Кроме того, поиск и исправление таких ошибок осложняется случайным характером их проявлений -- ошибка может проявляться очень редко.
 Это связано с тем, что для проявления ошибки необходимы некоторая конкретная последовательность и порядок действий различных потоков. 
+В системном программном обеспечении может использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний и планирования. 
+Таким образом, обнаружить ошибку, связанную с некорректной синхронизацией потоков, вручную практически невозможно, поэтому для их поиска используются различные автоматизированные подходы.
 
-В прикладных пользовательских программах бывает достаточно провести тщательное тестирование, возможно, с помощью инструментов динамического анализа, чтобы проверить основные сценарии поведения программы.
+Обычно выделяют два класса подходов: статические, которые проводят анализ исходного кода программы, и динамические, которые анализируют поведение программы в процессе ее выполнения.
+Каждый имеет свои достоинства и недостатки, например, методы динамического анализа обычно характеризуются высоким уровнем истинных предупреждений, в то время как статические методы позволяют покрыть больший объем кода.
+Таким образом, на данный момент не существует универсального подхода для анализа программ.
+
+В прикладных пользовательских программах может быть достаточно провести тщательное тестирование, возможно, с помощью инструментов динамического анализа, чтобы проверить основные сценарии поведения программы.
 %Однако, такое тестирование не дает гарантий корректного поведения даже при тех же самых условиях и входных данных, что для пользовательских приложений является приемлемым вариантом.
 В случае же системного программного обеспечения цена пропущенной ошибки может быть слишком велика, поэтому необходим более тщательный анализ программного кода.
 Кроме того, устройство системного программного обеспечения отличается от прикладных программ, что затрудняет анализ, так как далеко не все методы принимают во внимание специфику системного программного обеспечения.
+Поэтому в дополнении к динамическому анализу применяют методы статической верификации.
 
-В ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных функций: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
-Для синхронизации всех этих функций используются не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, которые характерны только для системного программного обеспечения, например, запреты прерываний и планирования. 
-Различные исследования показывают, что ошибки, связанные с параллельным выполнением, в системном программном обеспечении являются достаточно многочисленными, например, к ним относятся около 20\% всех ошибок в файловых
-системах~\citeinsynopsis{Palix11}.
+Методы статической верификации способны обеспечить доказательство отсутствия ошибок в некоторых заранее заданных предположениях, но при этом традиционно испытывают сложности при масштабировании на большие объемы исходного кода.
+Тем не менее, такие методы показывают высокую точность, что является важной особенностью при анализе такаого программного обеспечения, к которому предъявляются высокие требования качества.
+Развитие подобных методов позволит повысить качество системного программного обеспечения.
 
-Верификация многопоточных программ всегда являлась более сложной задачей, чем верификация последовательных программ.
-Точное вычисление всех возможных чередований (англ. interleavings), приводит к комбинаторному взрыву числа состояний.
-Поэтому, большинство инструментов статической верификации применяют арзличные техники оптимизации: редукция частичных порядков (англ. partial order reduction)~\citeinsynopsis{Abdulla:2014},\citeinsynopsis{Godefroid:1996}, абстракция счетчика (англ. counter abstraction)~\citeinsynopsis{Basler:2009} и другие.
-Тем не менее, большинство современных инструментов статической верификации плохо масштабируются на промышленное программное обеспечение.
-Этот факт подтверждается соревнованием по статической верификации~\citeinsynopsis{svcomp19}.
-Задачи из категории «многопоточность», основанные на драйверах операционной системы Linux вызывают значительные сложности для всех инструментов статической верификации.
+Таким образом, разработка масштабируемого метода статической верификации для поиска состояний гонки является актуальной задачей.
 
-Противоположностью методам проверки моделей являются методы статического анализа, которые нацелены на быстрый поиск ошибок без какой-либо уверенности в финальном вердикте.
-Такие инструменты применяют различные фильтры и эвристики для ускорения анализа и поэтому не могут гарантировать корректность, то есть отсутствие ошибок.
-В данной работе представлен подход к статической верификации многопоточного программного обеспечения, который позволяет легко настраивать баланс между скоростью и точностью проводимого анализа. Кроме того, он легко нацеливается на конкретную задачу.
+%В ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных функций: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
+%Для синхронизации всех этих функций используются не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, которые характерны только для системного программного обеспечения, например, запреты прерываний и планирования. 
+%Различные исследования показывают, что ошибки, связанные с параллельным выполнением, в системном программном обеспечении являются достаточно многочисленными, например, к ним относятся около 20\% всех ошибок в файловых
+%системах~\citeinsynopsis{Palix11}.
+%
+%Верификация многопоточных программ всегда являлась более сложной задачей, чем верификация последовательных программ.
+%Точное вычисление всех возможных чередований (англ. interleavings), приводит к комбинаторному взрыву числа состояний.
+%Поэтому, большинство инструментов статической верификации применяют арзличные техники оптимизации: редукция частичных порядков (англ. partial order reduction)~\citeinsynopsis{Abdulla:2014},\citeinsynopsis{Godefroid:1996}, абстракция счетчика (англ. counter abstraction)~\citeinsynopsis{Basler:2009} и другие.
+%Тем не менее, большинство современных инструментов статической верификации плохо масштабируются на промышленное программное обеспечение.
+%Этот факт подтверждается соревнованием по статической верификации~\citeinsynopsis{svcomp19}.
+%Задачи из категории «многопоточность», основанные на драйверах операционной системы Linux вызывают значительные сложности для всех инструментов статической верификации.
+%
+%Противоположностью методам проверки моделей являются методы статического анализа, которые нацелены на быстрый поиск ошибок без какой-либо уверенности в финальном вердикте.
+%Такие инструменты применяют различные фильтры и эвристики для ускорения анализа и поэтому не могут гарантировать корректность, то есть отсутствие ошибок.
+%В данной работе представлен подход к статической верификации многопоточного программного обеспечения, который позволяет легко настраивать баланс между скоростью и точностью проводимого анализа. Кроме того, он легко нацеливается на конкретную задачу.
 
 %В частности, анализ типовых ошибок, исправленных за год в ядре операционной системы Linux, показал, что ошибки, связанные с состоянием гонки образуют самый многочисленный класс и составляют около 17\% от всех 
 %\ifsynopsis
@@ -82,7 +99,7 @@ Phobos\citeinsynopsis{Leveson:1995}.
 %ошибок~\cite{commit_analysis_12}.
 %\fi
 
-Таким образом, задача поиска ошибок синхронизации в ядрах операционных систем, в том числе, состояний гонки по данным, является важной и актуальной задачей.
+%Таким образом, задача поиска ошибок синхронизации в ядрах операционных систем, в том числе, состояний гонки по данным, является важной и актуальной задачей.
 
 %\ifsynopsis
 %%Этот абзац появляется только в~автореферате.
@@ -137,17 +154,17 @@ Phobos\citeinsynopsis{Leveson:1995}.
 \begin{itemize}
   % \item Весенний коллоквиум молодых исследователей в области программной инженерии (SYRCoSE: Spring Young Researchers Colloquium on Software Engineering), Санкт-Петербург, 2014 г.;
   % \item Научно-исследовательский семинар лаборатории «Software and Computational Systems Lab» Университета Пассау, Германия, 2014 г.
-  \item Международная научно-практическая конференция "Инструменты и методы анализа программ" (TMPA: Tools and Methods for Program Analysis), Кострома, 2014 г.
+  \item Международная научно-практическая конференция <<Инструменты и методы анализа программ>> (TMPA: Tools and Methods for Program Analysis), Кострома, 2014 г.
   \item Международный семинар разработчиков CPAchecker, Москва, 2015 г.
   \item Летняя научная школа компании Microsoft (Microsoft Summer School), Кэмбридж, Англия, 2015 г.
   \item Научно-практическая Открытая конференция ИСП РАН, Москва, 2016 г.
-  \item Научно-исследовательский семинар лаборатории «Software and Computational Systems Lab» Университета Пассау, Германия, 2016 г.
-  \item Международная научно-практическая конференция "Инструменты и методы анализа программ" (TMPA: Tools and Methods for Program Analysis), Москва, 2017 г.
+  \item Научно-исследовательский семинар лаборатории <<Software and Computational Systems Lab>> Университета Пассау, Германия, 2016 г.
+  \item Международная научно-практическая конференция <<Инструменты и методы анализа программ>> (TMPA: Tools and Methods for Program Analysis), Москва, 2017 г.
   \item Международный семинар разработчиков CPAchecker, Падерборн, Германия, 2017 г.
   \item Международный семинар разработчиков CPAchecker, Москва, Россия, 2018 г.
   \item Соревнования по статической верификации SV-COMP, Прага, Чехия, 2019 г.
   \item Международный семинар разработчиков CPAchecker, Фрауенинзель, Германия, 2019 г.
-  \item Семинар "Математические вопросы информатики" Мехмат МГУ, Москва, Россия, 2019 г.
+  \item Семинар <<Математические вопросы информатики>> Мехмат МГУ, Москва, Россия, 2019 г.
 \end{itemize}
 
 % {\contribution} Автор принимал активное участие \ldots
