--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,16 @@
+@inproceedings{DRDDR,
+author = {Erickson, John and Musuvathi, Madanlal and Burckhardt, Sebastian and Olynyk, Kirk},
+title = {Effective Data-Race Detection for the Kernel},
+year = {2010},
+publisher = {USENIX Association},
+address = {USA},
+booktitle = {Proceedings of the 9th USENIX Conference on Operating Systems Design and Implementation},
+pages = {151–162},
+numpages = {12},
+location = {Vancouver, BC, Canada},
+series = {OSDI’10}
+}
+
 @article{ShapeTM,
  author = {Gotsman, Alexey and Berdine, Josh and Cook, Byron and Sagiv, Mooly},
  title = {Thread-Modular Shape Analysis},
@@ -16,6 +29,92 @@
  numpages = {12},
  keywords = {static analysis, abstract interpretation, shape analysis, concurrent programming}
 }
+
+@article{Lamport,
+author = {Lamport, Leslie},
+title = {Time, Clocks, and the Ordering of Events in a Distributed System},
+year = {1978},
+issue_date = {July 1978},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {21},
+number = {7},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/359545.359563},
+doi = {10.1145/359545.359563},
+journal = {Commun. ACM},
+month = jul,
+pages = {558–565},
+numpages = {8},
+keywords = {clock synchronization, multiprocess systems, computer networks, distributed systems}
+}
+
+@InProceedings{RaceSurvey,
+author="Raza, Aoun",
+editor="Grigoriev, Dima
+and Harrison, John
+and Hirsch, Edward A.",
+title="A Review of Race Detection Mechanisms",
+booktitle="Computer Science -- Theory and Applications",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="534--543",
+abstract="This survey examines research in the area of race detection tech-niques. Diverse flavors of on-the-fly, ahead-of-time and post-mortem techniques are covered. This survey tries to present advantages and limitations exhibited by different race detection techniques.",
+isbn="978-3-540-34168-0"
+}
+
+@article{RaceSurvey2,
+title = {Evaluation and Comparison of Ten Data Race Detection Techniques},
+year = {2017},
+issue_date = {January 2017},
+publisher = {Inderscience Publishers},
+address = {Geneva 15, CHE},
+volume = {10},
+number = {4–5},
+issn = {1740-0562},
+journal = {Int. J. High Perform. Comput. Netw.},
+month = {jan},
+pages = {279–288},
+numpages = {10}
+}
+
+@article{AdaptiveLock,
+  title={AdaptiveLock: Efficient Hybrid Data Race Detection Based on Real-World Locking Patterns},
+  author={Misun Yu and Joon-Sang Lee and Doo-Hwan Bae},
+  journal={International Journal of Parallel Programming},
+  year={2018},
+  pages={1-33}
+}
+
+
+@inproceedings{Witness3,
+author = {Beyer, Dirk and Dangl, Matthias and Dietsch, Daniel and Heizmann, Matthias},
+title = {Correctness Witnesses: Exchanging Verification Results between Verifiers},
+year = {2016},
+isbn = {9781450342186},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2950290.2950351},
+doi = {10.1145/2950290.2950351},
+booktitle = {Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+pages = {326–337},
+numpages = {12},
+keywords = {Software Verification, Program Analysis, Witness Validation, Model Checking, Correctness Witness},
+location = {Seattle, WA, USA},
+series = {FSE 2016}
+}
+
+@inproceedings{Witness2,
+author = {Beyer, Dirk and Dangl, Matthias and Dietsch, Daniel and Heizmann, Matthias},
+title = {Exchanging Verification Witnesses between Verifiers},
+booktitle = {Software Engineering 2017},
+year = {2017},
+editor = {Jürjens, Jan AND Schneider, Kurt} ,
+pages = { 93 },
+publisher = {Gesellschaft für Informatik e.V.},
+address = {Bonn}
+} 
 
 @inproceedings{Witness,
  author = {Beyer, Dirk and Dangl, Matthias and Dietsch, Daniel and Heizmann, Matthias and Stahlbauer, Andreas},
